--- a/src/gui/ListaSabres.fxml
+++ b/src/gui/ListaSabres.fxml
@@ -7,8 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox prefHeight="440.0" prefWidth="599.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/18">
+<VBox prefHeight="550.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.ListaSabresController">
    <children>
       <Label text="Listagem de Sabres">
          <font>
@@ -18,14 +17,18 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </Label>
-      <TableView prefHeight="200.0" prefWidth="200.0">
+      <TableView fx:id="tableViewSabres" prefHeight="200.0" prefWidth="200.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="ID" />
-          <TableColumn prefWidth="99.20001220703125" text="Modelo" />
-            <TableColumn prefWidth="96.0" text="Data Fabricação" />
-            <TableColumn prefWidth="72.0" text="Situação" />
-            <TableColumn prefWidth="159.20001220703125" text="Jedi" />
-            <TableColumn prefWidth="90.4000244140625" text="Manutenções" />
+          <TableColumn fx:id="tableColumnId" prefWidth="59.19998246431351" text="ID" />
+          <TableColumn fx:id="tableColumnModelo" prefWidth="87.19997787475586" text="Modelo" />
+            <TableColumn fx:id="tableColumnDataFabricacao" prefWidth="118.40003967285156" text="Data Fabricação" />
+            <TableColumn fx:id="tableColumnSituacao" prefWidth="108.79998779296875" text="Situação" />
+            <TableColumn fx:id="tableColumnModeloBotao" prefWidth="96.80001831054688" text="Modelo Botão" />
+            <TableColumn fx:id="tableColumnSistema" prefWidth="128.0" text="Sistema" />
+            <TableColumn fx:id="tableColumnGalaxia" prefWidth="119.20013427734375" text="Galáxia" />
+            <TableColumn fx:id="tableColumnModeloSensor" prefWidth="117.599853515625" text="Modelo Sensor" />
+            <TableColumn fx:id="tableColumnValidadeSensor" prefWidth="103.2000732421875" text="Validade Sensor" />
+            <TableColumn fx:id="tableColumnJedi" prefWidth="232.00006103515625" text="Jedi" />
         </columns>
       </TableView>
       <Label text="Listagem Manutenções">
@@ -36,11 +39,11 @@
             <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </padding>
       </Label>
-      <TableView prefHeight="200.0" prefWidth="200.0">
+      <TableView fx:id="tableViewManutencoes" prefHeight="200.0" prefWidth="200.0">
         <columns>
-          <TableColumn prefWidth="90.39996337890625" text="ID Sabre" />
-          <TableColumn prefWidth="140.800048828125" text="Data Manutenção" />
-            <TableColumn prefWidth="236.0" text="Responsável" />
+          <TableColumn fx:id="tableColumnIdManutencao" prefWidth="109.60003662109375" text="ID Manutenção" />
+          <TableColumn fx:id="tableColumnDataManutencao" prefWidth="132.79998779296875" text="Data Manutenção" />
+            <TableColumn fx:id="tableColumnResponsavel" prefWidth="355.20001220703125" text="Responsável" />
         </columns>
       </TableView>
    </children>
